# gtestExperimental

./: .gitignore  BuildVs2013Solution.bat  BuildXcodeSolution.command  CMakeLists.txt  MakeCodeBlocksEnvLinux.sh  MakeVS2013Env.bat  README.md
CodeToTest/: CMakeLists.txt  main.cpp  main.h
ExternalCode/gtest/: CMakeLists.txt
GTestSource/: CMakeLists.txt
SourceCode/: CMakeLists.txt  initialUnitTests.cpp
UnitTestCode/: CMakeLists.txt  initialUnitTests.cpp
googleTestRemote/: CMakeLists.txt
gtest_prebuilt_1_8_0/lib_win32/: gtest_main.lib
test/: ExampleTests.cpp
